combined F1, new Table3, Table 2 explained and formatted, ref olivier text

--- a/biblio.bib
+++ b/biblio.bib
@@ -3,7 +3,6 @@
   title     = {Incremental Preference Elicitation in Multi-attribute Domains for
                Choice and Ranking with the Borda Count},
   booktitle = {Proc. of {SUM} 2016},
-  pages     = {81--95},
   year      = {2016}
 }
 
@@ -17,9 +16,6 @@
 @Article{Boutilier2006,
   title = {Constraint-based optimization and utility elicitation using the minimax decision criterion},
   journal = {Artificial Intelligence},
-  volume = {170},
-  number = {8},
-  pages = {686 - 713},
   year = {2006},
   doi = {10.1016/j.artint.2006.02.003},
   author = {Boutilier,Craig and Patrascu,Relu and Poupart,Pascal and Schuurmans,Dale}
@@ -40,7 +36,6 @@
 	Author = {Cailloux,Olivier and Endriss,Ulle},
 	Booktitle = {Proc. of {ECAI} 2014},
 	Year = {2014},
-	Pages = {183--188},
 	Doi = {10.3233/978-1-61499-419-0-183},
 }
 
@@ -49,18 +44,14 @@
   Author = {Kalech,Meir and Kraus,Sarit and Kaminka,Gal A. and Goldman,Claudia V.},
   Journal = {Autonomous Agents and Multi-Agent Systems},
   Year = {2011},
-  Number = {1},
-  Pages = {151--182},
-  Volume = {22},
   doi = {10.1007/s10458-010-9133-6}
 }
 
 @InProceedings{Konczak05,
   Title = {Voting Procedures with Incomplete Preferences},
   Author = {Konczak,Kathrin and Lang,Jerome},
-  Booktitle = {Proc. of IJCAI'05},
+  Booktitle = {IJCAI'05},
   Year = {2005},
-  Pages = {124--129},
   url={www.eecs.harvard.edu/cs286r/courses/fall11/papers/KL05.pdf}
 }
 
@@ -76,8 +67,6 @@
   Author                   = {Llamazares, Bonifacio},
   Journal                  = {Group Decision and Negotiation},
   Year                     = {2016},
-  Pages                    = {567--584},
-  Volume                   = {25},
   doi = {10.1007/s10726-015-9452-8}
 }
 
@@ -86,16 +75,12 @@
   Author                   = {Llamazares,Bonifacio and Pe{\~{n}}a,Teresa},
   Journal                  = {European Journal of Operational Research},
   Year                     = {2013},
-  Number                   = {2},
-  Pages                    = {348--355},
-  Volume                   = {230},
   Doi                      = {10.1016/j.ejor.2013.04.013}
 }
 
 @inproceedings{Lu2011,
 	author = {Lu, Tyler and Boutilier, Craig},
 	year = {2011},
-	pages = {287-293},
 	title = {Robust Approximation and Incremental Elicitation in Voting Protocols},
 	booktitle = {Proc. of IJCAI'11},
 	doi = {10.5591/978-1-57735-516-8/IJCAI11-058}
@@ -107,9 +92,6 @@
   Author                   = {Naamani-Dery, Lihi and Golan, Inon and Kalech, Meir and Rokach, Lior},
   Journal                  = {Group Decision and Negotiation},
   Year                     = {2015},
-  Number                   = {6},
-  Pages                    = {1015--1033},
-  Volume                   = {24},
   doi={10.1007/s10726-015-9427-9}
 }
 
@@ -117,9 +99,6 @@
   title={Aggregating partially ordered preferences},
   author={Pini, Maria Silvia and Rossi, Francesca and Venable, Kristen Brent and Walsh, Toby},
   journal={Journal of Logic and Computation},
-  volume={19},
-  number={3},
-  pages={475--502},
   year={2009},
   doi={10.1093/logcom/exn012}
 }
@@ -129,9 +108,6 @@
   Author                   = {Salo, Ahti A. and H{\"a}m{\"a}l{\"a}inen,Raimo P.},
   Journal                  = {IEEE Trans. on Systems, Man and Cybernetics},
   Year                     = {2001},
-  Number                   = {6},
-  Pages                    = {533--545},
-  Volume                   = {31},
   doi = {10.1109/3468.983411}
 }
 
@@ -139,18 +115,14 @@
   Title                    = {The Foundations of Statistics},
   Author                   = {Savage, Leonard J. },
   Publisher                = {Wiley},
-  Year                     = {1954},
-  Address                  = {New York}
+  Year                     = {1954}
 }
 
 @Article{Stein1994,
   Title                    = {A stochastic dominance analysis of ranked voting systems with scoring},
   Author                   = {Stein, William E. and Mizzi, Philip J. and Pfaffenberger, Roger C.},
-  Journal                  = {European Journal of Operational Research},
+  Journal                  = {EJOR},
   Year                     = {1994},
-  Number                   = {1},
-  Pages                    = {78 - 85},
-  Volume                   = {74},
   Doi                      = {10.1016/0377-2217(94)90205-4},
 }
 
@@ -160,8 +132,7 @@
 	title={Positional Scoring Rules with Uncertain Weights},
 	booktitle= {Scalable Uncertainty Management},
 	year={2018},
-	pages={306--320},
-	doi={10.1007/978-3-030-00461-3\_21},
+	doi={10.1007/978-3-030-00461-3\_21}
 }
 
 @inproceedings{Xia2008,
@@ -169,7 +140,6 @@
 	title = {Determining Possible and Necessary Winners under Common Voting Rules given Partial Orders},
 	year = {2008},
 	booktitle = {Proc. of AAAI'08},
-	pages = {196–201},
 	doi= {10.1613/jair.3186}
 }
 
@@ -178,8 +148,7 @@
 	title = {Communication Complexity of Common Voting Rules},
 	year = {2005},
 	doi = {10.1145/1064009.1064018},
-	booktitle = {Proc. of EC'05},
-	pages = {78–87}
+	booktitle = {Proc. of EC'05}
 }
 
 @INPROCEEDINGS{Pini2007,
@@ -187,7 +156,6 @@
 	title = {Incompleteness and Incomparability in Preference Aggregation},
 	booktitle = {Proc. of IJCAI'07},
 	year = {2007},
-	pages = {1464-1469},
 	doi = {10.1016/j.artint.2010.11.009}
 }
 
@@ -196,7 +164,6 @@
 	title = {Uncertainty in Preference Elicitation and Aggregation},
 	year = {2007},
 	booktitle = {Proc. of AAAI'07},
-	pages = {3–8},
 	url = {https://dl.acm.org/doi/10.5555/1619645.1619648}
 }
 
@@ -205,7 +172,6 @@
 	title = {Complexity of Terminating Preference Elicitation},
 	year = {2008},
 	booktitle = {Proc. of AAMAS'08},
-	pages = {967–974},
 	url ={https://dl.acm.org/doi/abs/10.5555/1402298.1402357}
 }
 
@@ -214,10 +180,7 @@
 	author = {Conitzer, Vincent},
 	title = {Eliciting Single-Peaked Preferences Using Comparison Queries},
 	year = {2009},
-	volume = {35},
-	number = {1},
 	journal = {Journal of Artificial Intelligence Research},
-	pages = {161–191},
 	doi={10.1613/jair.2606}
 }
 
@@ -226,7 +189,6 @@
 	title = {Elicitation for Preferences Single Peaked on Trees},
 	year = {2016},
 	booktitle = {Proc. of IJCAI'16},
-	pages = {215–221},
 	url={https://dl.acm.org/doi/10.5555/3060621.3060652}
 }
 
@@ -234,7 +196,6 @@
 	author={Dey,Palash and Misra,Neeldhara},
 	title={Preference Elicitation for Single Crossing Domain},
 	year={2016},
-	pages={222-228},
 	url={https://dl.acm.org/doi/10.5555/3060621.3060653},
 	booktitle={Proc. of IJCAI'16}
 }
@@ -242,8 +203,6 @@
 @article{Dey2018,
 	title = {Complexity of manipulation with partial information in voting},
 	journal = {Theoretical Computer Science},
-	volume = {726},
-	pages = {78 - 99},
 	year = {2018},
 	doi = {10.1016/j.tcs.2018.03.012},
 	author = {Dey,Palash and Misra,Neeldhara and Y. Narahari},
@@ -253,8 +212,7 @@
 	author = {Endriss, Ulle and Obraztsova, Svetlana and Polukarov, Maria and Rosenschein, Jeffrey S.},
 	title = {Strategic Voting with Incomplete Information},
 	year = {2016},
-	booktitle = {Proc. of IJCAI'16},
-	pages = {236–242},
+	booktitle = {IJCAI'16},
 	url={https://dl.acm.org/doi/10.5555/3060621.3060655}
 }
 
@@ -263,8 +221,6 @@
 	author={Palash Dey},
 	journal={Theoretical Computer Science},
 	year={2018},
-	volume={731},
-	pages={36-49},
 	doi = {10.1016/j.tcs.2018.03.028}
 }
 
@@ -273,7 +229,6 @@
 	title = {Manipulation under Voting Rule Uncertainty},
 	year = {2012},
 	booktitle = {Proc. AAMAS'12},
-	pages = {627–634},
 	url={https://dl.acm.org/doi/10.5555/2343776.2343786}
 }
 
@@ -282,15 +237,13 @@
 	title={Dominating Manipulations in Voting with Partial Information},
 	year={2011},
 	url={https://dl.acm.org/doi/10.5555/2900423.2900525},
-	booktitle={Proc. of AAAI'11},
+	booktitle={AAAI'11},
 }
 
 @article{Lev2019,
 	author = {Lev, Omer and Meir, Reshef and Obraztsova, Svetlana and Polukarov, Maria},
 	year = {2019},
-	pages = {2077-2084},
 	title = {Heuristic Voting as Ordinal Dominance Strategies},
-	volume = {33},
 	journal = {Proc. of the AAAI'19},
 	doi = {10.1609/aaai.v33i01.33012077}
 }
@@ -300,16 +253,13 @@
 	title = {Voter Response to Iterated Poll Information},
 	year = {2012},
 	booktitle = {Proc. of AAMAS'12},
-	pages = {635–644},
 	url={https://dl.acm.org/doi/10.5555/2343776.2343787}
 }
 
 @article{Giritligil2005,
 	author = {Giritligil, Ayca and Sertel, Murat and Kara, Ayça},
 	year = {2005},
-	pages = {43-73},
 	title = {Does majoritarian approval matter in selecting a social choice rule? An exploratory panel study},
-	volume = {25},
 	journal = {Social Choice and Welfare},
 	doi = {10.1007/s00355-005-0024-8}
 }
@@ -319,7 +269,6 @@
 	title = {Manipulative Design of Scoring Systems},
 	year = {2019},
 	booktitle = {Proc. of AAMAS'19},
-	pages = {1814–1816},
 	url = {https://dl.acm.org/doi/10.5555/3306127.3331928}
 }
 
@@ -329,4 +278,12 @@
 	booktitle = {Proc. of ADT 2013},
 	year      = {2013},
 	url = {https://www.preflib.org/}
+}
+
+@book{Lichtenstein2006, 
+	author = {Lichtenstein, Sarahand Slovic, Paul},
+	title={The Construction of Preference}, 
+	DOI={10.1017/CBO9780511618031}, 
+	publisher={Cambridge University Press}, 
+	year={2006}
 }
