fit in 15 pages

--- a/biblio.bib
+++ b/biblio.bib
@@ -51,8 +51,7 @@
   Title = {Voting Procedures with Incomplete Preferences},
   Author = {Konczak,Kathrin and Lang,Jerome},
   Booktitle = {IJCAI'05},
-  Year = {2005},
-  url={www.eecs.harvard.edu/cs286r/courses/fall11/papers/KL05.pdf}
+  Year = {2005}
 }
 
 @Book{Kouvelis1997,
@@ -281,7 +280,8 @@
 }
 
 @book{Lichtenstein2006, 
-	author = {Lichtenstein, Sarahand Slovic, Paul},
+	author = {Lichtenstein, Sarah
+and Slovic, Paul},
 	title={The Construction of Preference}, 
 	DOI={10.1017/CBO9780511618031}, 
 	publisher={Cambridge University Press}, 
