--- a/minimax.tex
+++ b/minimax.tex
@@ -40,6 +40,8 @@
 % to display URLs in blue roman font according to Springer's eBook style:
 % \renewcommand\UrlFont{\color{blue}\rmfamily}
 
+%\renewcommand{\UrlFont}{\ttfamily\scriptsize}
+
 \begin{document}
 %
 \title{Simultaneous Elicitation of Scoring Rule and Agent Preferences for Robust Winner Determination}
@@ -296,8 +298,8 @@ Note that in \cref{claim:rankPMR}, in the case $(x \pprefeq_j y)$, $\beta$ is th
 %Recall that $\pw$ represents the weight vectors compatible with the preferences of the chair stated so far.
 The pairwise max regret $\PMR(x,y; \pprofile,W)$ can thus be obtained by solving the following linear program defined on the variables $w_1, …, w_m$:
 \begin{align}
-	\max_{\w} & \sum_{r=1}^m (\hat{\alpha}_{r}^{y} - \hat{\alpha}_{r}^{x}) w_{r}\\
-	\text{ s.t. } & w_1 = 1 ≥ … ≥ w_m = 0, \text{\cref{eq:convexity}} \text{ and } \w \in \pw.
+	\max_{\w} \sum_{r=1}^m (\hat{\alpha}_{r}^{y} - \hat{\alpha}_{r}^{x}) w_{r} \quad
+	\text{ s.t. } w_1 = 1 ≥ … ≥ w_m = 0, \text{\cref{eq:convexity}} \text{ and } \w \in \pw.
 \end{align}
 %Note that given our choice $w_{1}=1$ and $w_{m}=0$, there are only $m-2$ variables 
 %(we leave $w_{1}$ and $w_{m}$ in the LP just for clarity of presentation).
@@ -361,7 +363,7 @@ Thus, our task is to build a profile, given $\lambda$ and $r ≤ m-2$, in such a
 
 \begin{example*}
 	Suppose we want to ask the following question to the chair: $w_{2} - w_{3} ≥ 2 (w_{3} - w_{4})$. We show the profile in Figure \ref{fig:profileQstComm} to the chair and ask who should win (each column is a preference of an agent).	Both $a$ and $b$ have scores higher than $c$ and $d$ for all convex weights, thus either $a$ or $b$ will be picked under our hypothesis; and $s(a) ≥ s(b) ⇔ w_2 + 2 w_4 ≥ 3 w_3$.
-	Figure \ref{fig:profileQstCommCompact} shows the same profile using a compressed view, the numbers in bold indicating the number of agents having the preference in the corresponding column. As the proof shows, constructed profiles require only four different linear orders.
+	Figure \ref{fig:profileQstCommCompact} represents the same profile using a compressed view, the numbers in bold indicating the number of agents having the preference in the corresponding column. As the proof shows, constructed profiles require only four different linear orders.
 	\begin{figure}
 		\centering
 		\begin{subfigure}[b]{0.49\textwidth}
@@ -394,7 +396,7 @@ Thus, our task is to build a profile, given $\lambda$ and $r ≤ m-2$, in such a
 			\caption{}
 			\label{fig:profileQstCommCompact}
 		\end{subfigure}
-		\caption{Profile representing a question for the chair in extended (a) and compact (b) form.}
+		\caption{Profile representing a question to the chair in extended (a) and compact (b) form.}
 	\end{figure}
 \end{example*}
 
@@ -485,70 +487,75 @@ For the synthetic datasets, we follow an Impartial Culture (IC) assumption: the 
 %independently and all have the same probability of appearing. 
 We believe IC to be a challenging situation and expect the number of questions to ask, in order to reach a certain level of regret, to decrease with less varied profiles.
 %We adopt IC because it is a more challenging situation: as can be expected intuitively , the number of questions to be asked decrease with less varied profiles. 
-To generate the scoring rule weights, we first draw $m \!-\! 1$ numbers uniformly at random (in the interval $\intvl{0,1}$ representing weight ``differences''), normalize and sort them; a sequence of convex decreasing weightx is then obtained by a decumulative sum. The penalty parameters for the Pessimistic and Extended pessimistic strategies are  $\epsilon_{\text{chair}} = 1.1$, $\epsilon'_{\text{chair}} = 10^{-6}$, $\epsilon_{\text{agent}} = 1.0$ and $\epsilon'_{\text{agent}} = 0$.
-
-\begin{figure}
-	\caption{Average MMR in problems of size $(5, 10)$ after $k$ questions.}
-	\label{fig:smallSize}
-	\begin{tikzpicture}
-		\begin{axis}[
-			y=8,
-			xlabel=Number of Questions,
-			ylabel=Avg. Regret,
-			ytick={0,2,4,6,8,10},
-			xtick distance=10,
-			ytick distance=2,
-			xtick pos=left,
-			ymajorgrids=true,
-			ytick style={draw=none},
-			ymin=0,
-			ymax=11,
-			xmin=0,
-			xmax=100,
-			yticklabels={0,2,4,6,8,10},
-			legend style={font=\scriptsize}]
-			\addlegendimage{mark=*,teal,mark size=1.5}
-			\addlegendimage{mark=triangle*,orange,mark size=1.5}
-			\addlegendimage{mark=square*,blue,mark size=1.5}
-			\addlegendimage{mark=diamond*,red,mark size=1.5}
-			
-			\addplot[thick, mark=*, mark size = {2}, mark indices = {35}, teal] table [x=k, y=Pes.]{data/comparison.dat};
-			\addlegendentry{Pes.}
-			\addplot[thick, mark=triangle*, mark size = {2}, mark indices = {45}, orange] table [x=k, y=Ex.Pes.]{data/comparison.dat};
-			\addlegendentry{Ex.Pes.}
-			\addplot[thick, mark=square*, mark size = {2}, mark indices = {50}, blue] table [x=k, y=Eli.]{data/comparison.dat};
-			\addlegendentry{Eli.}
-			\addplot[thick, mark=diamond*, mark size = {2}, mark indices = {50}, red] table [x=k, y=Rnd.]{data/comparison.dat};
-			\addlegendentry{Rnd.}
-			
-		\end{axis}
-	\end{tikzpicture}
-\end{figure}
-
-%\begin{figure}
-%	\caption{Average MMR in problems of size $(5, 10)$ after $k$ questions.}
-%	\label{fig:smallSize}
-%%	\Description{Graph showing that Pessimistic performs slightly better than Extended pessimistic, itself performing better than Elitist, itself performing much better than Random.}
-%	\includegraphics[width=.45\textwidth]{comparison.png}
-%\end{figure}
+To generate the scoring rule weights, we first draw $m \!-\! 1$ numbers uniformly at random (in the interval $\intvl{0,1}$ representing weight ``differences''), normalize and sort them; a sequence of convex decreasing weights is then obtained by a decumulative sum. The penalty parameters for the Pessimistic and Extended pessimistic strategies are  $\epsilon_{\text{chair}} = 1.1$, $\epsilon'_{\text{chair}} = 10^{-6}$, $\epsilon_{\text{agent}} = 1.0$ and $\epsilon'_{\text{agent}} = 0$.
 \sisetup{table-number-alignment = center, table-figures-integer=2, table-figures-decimal=1, table-auto-round}
-\begin{table}
-	\caption{Average MMR in problems of size $(10, 20)$ after $k$ questions assuming geometric weights.}
-	\label{tab:geometricWeights}
-	\begin{tabular}{S[table-figures-integer=3, table-figures-decimal=0]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left, table-figures-integer=1]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left, table-figures-integer=1]}
-		\toprule
-		{k} & {Pes.} & {sd} & {Eli.} & {sd} \\
-		\midrule
-		0	&20.0	&0.0	&20.0	&0.0\\
-		50	&15.96	&0.54	&17.26	&0.42\\
-		100	&12.48	&0.93	&15.6	&0.43\\
-		150	&9.58	&1.37	&13.94	&0.76\\
-		200	&7.43	&1.25	&10.95	&1.12\\
-		250	&5.26	&1.52	&6.6	&0.79\\
-		300	&3.47	&1.32	&6.57	&0.79\\
-		\bottomrule
-	\end{tabular}
-\end{table}
+\begin{minipage}{\textwidth}
+	\vspace{0.4cm}
+	\begin{minipage}{\textwidth}
+		\centering
+		\captionof{figure}{Average MMR in problems of size $(5, 10)$ after $k$ questions.}
+		\label{fig:smallSize}
+		\scalebox{0.85}{
+		\begin{tikzpicture}
+			\begin{axis}[
+				y=8,
+				xlabel=Number of Questions,
+				ylabel=Avg. Regret,
+				ytick={0,2,4,6,8,10},
+				xtick distance=10,
+				ytick distance=2,
+				xtick pos=left,
+				ymajorgrids=true,
+				ytick style={draw=none},
+				ymin=0,
+				ymax=11,
+				xmin=0,
+				xmax=100,
+				yticklabels={0,2,4,6,8,10},
+				legend style={font=\scriptsize}]
+				\addlegendimage{mark=*,teal,mark size=1.5}
+				\addlegendimage{mark=triangle*,orange,mark size=1.5}
+				\addlegendimage{mark=square*,blue,mark size=1.5}
+				\addlegendimage{mark=diamond*,red,mark size=1.5}
+				
+				\addplot[thick, mark=*, mark size = {2}, mark indices = {35}, teal] table [x=k, y=Pes.]{data/comparison.dat};
+				\addlegendentry{Pes.}
+				\addplot[thick, mark=triangle*, mark size = {2}, mark indices = {45}, orange] table [x=k, y=Ex.Pes.]{data/comparison.dat};
+				\addlegendentry{Ex.Pes.}
+				\addplot[thick, mark=square*, mark size = {2}, mark indices = {50}, blue] table [x=k, y=Eli.]{data/comparison.dat};
+				\addlegendentry{Eli.}
+				\addplot[thick, mark=diamond*, mark size = {2}, mark indices = {50}, red] table [x=k, y=Rnd.]{data/comparison.dat};
+				\addlegendentry{Rnd.}
+				
+			\end{axis}
+		\end{tikzpicture}
+		}
+	\end{minipage}
+	\vspace{0.2cm}
+	
+	\begin{minipage}{\textwidth}
+		\centering
+		\captionof{table}{Average MMR in problems of size $(10, 20)$ after $k$ questions assuming geometric weights.}
+		\label{tab:geometricWeights}
+		\scalebox{0.85}{
+		\begin{tabular}{S[table-figures-integer=3, table-figures-decimal=0]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left, table-figures-integer=1]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left, table-figures-integer=1]}
+			\toprule
+			{k} & {Pes.} & {sd} & {Eli.} & {sd} \\
+			\midrule
+			0	&20.0	&0.0	&20.0	&0.0\\
+			50	&15.96	&0.54	&17.26	&0.42\\
+			100	&12.48	&0.93	&15.6	&0.43\\
+			150	&9.58	&1.37	&13.94	&0.76\\
+			200	&7.43	&1.25	&10.95	&1.12\\
+			250	&5.26	&1.52	&6.6	&0.79\\
+			300	&3.47	&1.32	&6.57	&0.79\\
+			\bottomrule
+		\end{tabular}
+		}
+	\end{minipage}
+	\vspace{0.4cm}
+\end{minipage}
+
 \paragraph{Comparison of strategies}
 Our first experiment concerns small size situations.
 \Cref{fig:smallSize} compares some of our strategies in the case $m = 5, n = 10$ (variations around this size yield similar conclusions), where the results are averaged over $200$ runs.
@@ -561,12 +568,11 @@ We also compared the Pessimistic strategy against Elitist in a situation specifi
 \paragraph{Evaluation of Pessimistic Strategy}
 \label{sec:lowRegret}
 Our next set of experiments evaluate the Pessimistic strategy in absolute terms. 
-We first wonder how many questions should be asked in order to achieve low regret, fixed at $n / 10$: this is equivalent to the difference of score of an alternative $x$ that results from switching from a profile $P$ to a profile $P'$ where a tenth of the agents rank $x$ last instead of first. Another interesting measure is the average number of questions asked to each participant before reaching zero regret. The results for various sizes are displayed in \cref{tab:questions}. The notation $q_{c {\scriptscriptstyle \MMR}≤ x}$ indicates the number of questions asked to the committee to reach a threshold regret $x$, averaged on $20$ runs. We use a similar notation for the questions to the voters $q_{v {\scriptscriptstyle \MMR}≤ x}$, but in this case we display the quartiles ([Q1|M|Q3]) of the number of questions asked to the voters, averaged on $20$ runs. It is important to mention that we stop our computation at $1000$ questions, the empty cells in \cref{tab:questions} indicate, thus, that the Pessimistic strategy applied to that dataset did not reach zero regret in $1000$ questions.
-
+We first wonder how many questions should be asked in order to achieve low regret, fixed at $n / 10$: this is equivalent to the difference of score of an alternative $x$ that results from switching from a profile $P$ to a profile $P'$ where a tenth of the agents rank $x$ last instead of first. Another interesting measure is the average number of questions asked to each participant before reaching zero regret. The results for various sizes are displayed in \cref{tab:questions}. The notation $q_{c {\scriptscriptstyle \MMR}≤ x}$ indicates the number of questions asked to the chair to reach a threshold regret $x$, averaged on $20$ runs. We use a similar notation for the questions to the voters $q_{v {\scriptscriptstyle \MMR}≤ x}$, but in this case we display the quartiles ([Q1|M|Q3]) of the number of questions asked to the voters, averaged on $20$ runs. It is important to mention that we stop our computation at $1000$ questions, the empty cells in \cref{tab:questions} indicate, thus, that the Pessimistic strategy applied to that dataset did not reach zero regret in $1000$ questions.
 %For example, in the case $m = 10, n = 20$, Pessimistic asks on average $49$ questions to the chair and $18$ questions to each agent (\cref{tab:Numquestions} provides more data).
-
-\begin{table}[ht]
-	\caption{Analysis of the questions asked by Pessimistic strategy on the datasets of \cref{fig:linearity}. The column $q_{c \scriptscriptstyle{\MMR} ≤ n/10}$ ($q_{c \scriptscriptstyle{\MMR} = 0}$) indicates the average number of questions asked to the chair to reach a threshold regret of $\frac{n}{10}$ (zero regret). The column $q_{v \scriptscriptstyle{\MMR} ≤ n/10}$ ($q_{v \scriptscriptstyle{\MMR} = 0}$) represents the average of the quartiles of the questions asked to the voters to reach $\frac{n}{10}$ regret (zero regret).}
+\vspace{-0.6cm}
+\begin{table}
+	\caption{Questions asked by Pessimistic strategy on several datasets. The column $q_{c \scriptscriptstyle{\MMR} ≤ n/10}$ ($q_{c \scriptscriptstyle{\MMR} = 0}$) indicates the avg number of questions asked to the chair to reach a threshold regret of $\frac{n}{10}$ (zero regret). The column $q_{v \scriptscriptstyle{\MMR} ≤ n/10}$ ($q_{v \scriptscriptstyle{\MMR} = 0}$) represents the avg of the quartiles of the questions asked to the voters to reach $\frac{n}{10}$ regret (zero regret).}
 	\label{tab:questions}
 	\begin{tabular}{cccS[table-number-alignment = right, table-figures-integer=2]@{ ± }S[table-number-alignment = left, table-figures-integer=2] S[table-figures-integer=3, table-figures-decimal=1]@{ | }S[table-figures-integer=2, table-figures-decimal=1]@{ | }S[table-figures-integer=2, table-figures-decimal=1]@{ ]} S[table-number-alignment = right, table-figures-integer=2]@{ ± }S[table-number-alignment = left, table-figures-integer=2]S[table-figures-integer=3, table-figures-decimal=1]@{ | }S[table-figures-integer=2, table-figures-decimal=1]@{ | }S[table-figures-integer=2, table-figures-decimal=1]@{ ]}}
 		\toprule
@@ -590,115 +596,102 @@ We first wonder how many questions should be asked in order to achieve low regre
 In the \textit{Skate} problem, the value $\MMR\!=\!1$ is reached after less than $100$ questions, while the IC case of the same size ($m = 14, n = 9$) requires more than $200$ questions to reach that value. This reasoning also applies to the \textit{Courses} dataset but not to the \textit{T Shirt} dataset. This can be explained by the high degree of similarity in the preference rankings of the \textit{Skate} and the \textit{Courses} problems, which helps reducing the regret faster. For example, in \textit{Skate} the top-2 alternatives are the same for all agents, and 8 out of 9 agents rank the same alternative at position 3. By contrast, in \textit{T Shirt}, the alternatives are evenly distributed in the preference rankings. 
 % in \textit{Courses} all agents rank the same alternative at the top position,
 
-\begin{figure}
-	\caption{Average MMR (normalized by $n$) after $k$ questions with Pessimistic strategy for different datasets.}
-	\label{fig:linearity}
-	\begin{tikzpicture}
-		\pgfplotsset{
-			every axis legend/.append style={
-				at={(0.5,1.1)},
-				anchor=south
-			},
+\begin{minipage}{\textwidth}
+	\vspace{0.4cm}
+	\begin{minipage}{\textwidth}
+		\centering
+		\captionof{figure}{Average MMR (normalized by $n$) after $k$ questions with Pessimistic strategy for different datasets.}
+		\label{fig:linearity}
+		\begin{tikzpicture}
+			\pgfplotsset{
+				every axis legend/.append style={
+					at={(0.5,1.1)},
+					anchor=south
+				},
+			}
+			\begin{axis}[
+				y=80,
+				legend columns=3,
+				xlabel=Number of Questions,
+				ylabel=MMR/n,
+				ytick={0,0.5,1},
+				xtick distance=100,
+				xtick pos=left,
+				ymajorgrids=true,
+				ytick style={draw=none},
+				ymin=0,
+				ymax=1,
+				xmin=0,
+				xmax=1000,
+				yticklabels={0,0.5,1},
+				legend style={font=\footnotesize}]
+				
+				\addlegendimage{mark=halfsquare right*,brown,mark size=2}
+				\addlegendimage{mark=diamond*,red,mark size=2}
+				\addlegendimage{mark=pentagon*,cyan,mark size=2}
+				\addlegendimage{mark=halfcircle*,violet,mark size=2}
+				\addlegendimage{mark=*,pink,mark size=2}
+				\addlegendimage{mark=triangle*,green,mark size=2}
+				\addlegendimage{mark=halfsquare left*,blue,mark size=2}
+				\addlegendimage{mark=square*,teal,mark size=2}
+				\addlegendimage{mark=halfsquare*,magenta,mark size=2}
+				
+				
+				\addplot[thick, mark=halfsquare right*, mark size = {2}, mark indices = {120}, brown] table [x=k, y=5.20]{data/linearity_redone.dat};
+				\addlegendentry{m=5, n=20}
+				\addplot[thick, mark=diamond*, mark size = {2}, mark indices = {150}, red] table [x=k, y=10.20]{data/linearity_redone.dat};
+				\addlegendentry{m=10, n=20}
+				\addplot[thick, mark=pentagon*, mark size = {2}, mark indices = {240}, cyan] table [x=k, y=11.30]{data/linearity_redone.dat};
+				\addlegendentry{m=11, n=30}
+				\addplot[thick, mark=halfcircle*, mark size = {2}, mark indices = {400}, violet] table [x=k, y=tshirts]{data/linearity_redone.dat};
+				\addlegendentry{tshirts m11n30}
+				\addplot[thick, mark=*, mark size = {2}, mark indices = {400}, pink] table [x=k, y=courses]{data/linearity_redone.dat};
+				\addlegendentry{courses m9n146}
+				\addplot[thick, mark=triangle*, mark size = {2}, mark indices = {400}, green] table [x=k, y=9.146]{data/linearity_redone.dat};
+				\addlegendentry{m=9, n=146}
+				\addplot[thick, mark=halfsquare left*, mark size = {2}, mark indices = {200}, blue] table [x=k, y=14.9]{data/linearity_redone.dat};
+				\addlegendentry{m=14, n=9}
+				\addplot[thick, mark=square*, mark size = {2}, mark indices = {60}, teal] table [x=k, y=skate]{data/linearity_redone.dat};
+				\addlegendentry{skate m14n9}
+				\addplot[thick, mark=halfsquare*, mark size = {2}, mark indices = {400}, magenta] table [x=k, y=15.30]{data/linearity_redone.dat};
+				\addlegendentry{m=15, n=30}
+			\end{axis}
+		\end{tikzpicture}
+	\end{minipage}
+	\vspace{0.2cm}
+	
+	\begin{minipage}{\textwidth}
+		\centering
+		\captionof{table}{Average MMR in problems of size $(10, 20)$ after $500$ questions, among which $q_c$ to the chair.}
+		\label{tab:twoP500}
+		\scalebox{0.85}{
+		\begin{tabular}{S[table-figures-integer=3, table-figures-decimal=0]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left, table-figures-integer=1]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left, table-figures-integer=1]}
+			\toprule
+			{$q_c$} & {2 ph.\ ca} & {sd} & {2 ph.\ ac} & {sd} \\
+			\midrule		
+			0	&0.78&	0.38&	0.78&	0.38\\
+			15	&0.58&	0.3	&   0.63&   0.26\\
+			30	&0.29&  0.31&	0.4&    0.52\\
+			50	&0.0&	0.0&	0.0&	0.0\\
+			100	&0.21&	0.36&	0.07&	0.12\\
+			200	&2.84&	1.52&	1.72&	1.79\\
+			300	&6.02&	2.28&	6.79&	0.81\\
+			400	&10.95&	0.74&	12.8&	0.92\\
+			500	&20.0&	0.0&	20.0&	0.0\\
+			
+			\bottomrule
+		\end{tabular}
 		}
-		\begin{axis}[
-			y=80,
-			legend columns=3,
-			xlabel=Number of Questions,
-			ylabel=MMR/n,
-			ytick={0,0.5,1},
-			xtick distance=100,
-			xtick pos=left,
-			ymajorgrids=true,
-			ytick style={draw=none},
-			ymin=0,
-			ymax=1,
-			xmin=0,
-			xmax=1000,
-			yticklabels={0,0.5,1},
-			legend style={font=\footnotesize}]
-			
-			\addlegendimage{mark=halfsquare right*,brown,mark size=2}
-			\addlegendimage{mark=diamond*,red,mark size=2}
-			\addlegendimage{mark=pentagon*,cyan,mark size=2}
-			\addlegendimage{mark=halfcircle*,violet,mark size=2}
-			\addlegendimage{mark=*,pink,mark size=2}
-			\addlegendimage{mark=triangle*,green,mark size=2}
-			\addlegendimage{mark=halfsquare left*,blue,mark size=2}
-			\addlegendimage{mark=square*,teal,mark size=2}
-			\addlegendimage{mark=halfsquare*,magenta,mark size=2}
-			
-			
-			\addplot[thick, mark=halfsquare right*, mark size = {2}, mark indices = {120}, brown] table [x=k, y=5.20]{data/linearity_redone.dat};
-			\addlegendentry{m=5, n=20}
-			\addplot[thick, mark=diamond*, mark size = {2}, mark indices = {150}, red] table [x=k, y=10.20]{data/linearity_redone.dat};
-			\addlegendentry{m=10, n=20}
-			\addplot[thick, mark=pentagon*, mark size = {2}, mark indices = {240}, cyan] table [x=k, y=11.30]{data/linearity_redone.dat};
-			\addlegendentry{m=11, n=30}
-			\addplot[thick, mark=halfcircle*, mark size = {2}, mark indices = {400}, violet] table [x=k, y=tshirts]{data/linearity_redone.dat};
-			\addlegendentry{tshirts m11n30}
-			\addplot[thick, mark=*, mark size = {2}, mark indices = {400}, pink] table [x=k, y=courses]{data/linearity_redone.dat};
-			\addlegendentry{courses m9n146}
-			\addplot[thick, mark=triangle*, mark size = {2}, mark indices = {400}, green] table [x=k, y=9.146]{data/linearity_redone.dat};
-			\addlegendentry{m=9, n=146}
-			\addplot[thick, mark=halfsquare left*, mark size = {2}, mark indices = {200}, blue] table [x=k, y=14.9]{data/linearity_redone.dat};
-			\addlegendentry{m=14, n=9}
-			\addplot[thick, mark=square*, mark size = {2}, mark indices = {60}, teal] table [x=k, y=skate]{data/linearity_redone.dat};
-			\addlegendentry{skate m14n9}
-			\addplot[thick, mark=halfsquare*, mark size = {2}, mark indices = {400}, magenta] table [x=k, y=15.30]{data/linearity_redone.dat};
-			\addlegendentry{m=15, n=30}
-		\end{axis}
-	\end{tikzpicture}
-\end{figure}
-
+	\end{minipage}
+	\vspace{0.4cm}
+\end{minipage}
 %\subsection{Value of information comparison}
 \paragraph{Comparison with Two Phases}
 
-%\begin{table}
-%	\caption{Average MMR in problems of size $(10, 20)$ after $400$ questions, among which $q_c$ to the chair.}
-%	\label{tab:twoP400}
-%	\begin{tabular}{S[table-figures-integer=3, table-figures-decimal=0]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left, table-figures-integer=1]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left, table-figures-integer=1]}
-%		\toprule
-%		{$q_c$} & {2 ph.\ ca} & {sd} & {2 ph.\ ac} & {sd} \\
-%		\midrule
-%		0 & 0.86 & 0.72 & 0.73 & 0.67 \\
-%		15 & 0.92 & 0.82 & 0.93	& 0.96  \\
-%		30 & 0.9 & 0.97 & 0.72	& 0.7 \\
-%		50 & 1.36 & 1.29 & 1.38	& 1.17 \\
-%		100 & 1.9 & 1.72 & 2.5	& 1.46  \\
-%		%150 & 4.4 & 2.09 & 4.23 & 1.53 \\
-%		200 & 6.05	& 1.53  & 6.06 & 1.61 \\
-%		%250 & 8.27	& 1.54& 8.86 & 1.38 \\
-%		300 &11.54	& 1.07& 11.82 &1.25 \\
-%		%350 &15.39	& 0.61 &15.54	&0.73 \\
-%		400 &20.0 & 0.0 & 20.0 & 0.0 \\
-%		\bottomrule
-%	\end{tabular}
-%\end{table}
-
-\begin{table}
-	\caption{Average MMR in problems of size $(10, 20)$ after $500$ questions, among which $q_c$ to the chair.}
-	\label{tab:twoP500}
-	\begin{tabular}{S[table-figures-integer=3, table-figures-decimal=0]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left, table-figures-integer=1]S[table-number-alignment = right]@{ ± }S[table-number-alignment = left, table-figures-integer=1]}
-		\toprule
-		{$q_c$} & {2 ph.\ ca} & {sd} & {2 ph.\ ac} & {sd} \\
-		\midrule		
-		0	&0.78&	0.38&	0.78&	0.38\\
-		15	&0.58&	0.3	&   0.63&   0.26\\
-		30	&0.29&  0.31&	0.4&    0.52\\
-		50	&0.0&	0.0&	0.0&	0.0\\
-		100	&0.21&	0.36&	0.07&	0.12\\
-		200	&2.84&	1.52&	1.72&	1.79\\
-		300	&6.02&	2.28&	6.79&	0.81\\
-		400	&10.95&	0.74&	12.8&	0.92\\
-		500	&20.0&	0.0&	20.0&	0.0\\
-		
-		\bottomrule
-	\end{tabular}
-\end{table}
-
 The experiments so far let the strategy free to question either the chair or an agent at each step. One may wonder what is lost in terms of regret by asking different proportions of questions to the chair and the agents. Such restrictions may be useful because of (partial) unavailability of the chair, or because the estimated cognitive costs may differ sensibly. %, as these types of questions differ in nature. 
 
-\Cref{tab:twoP500} shows the MMR value reached in problems of size $m = 10, n = 20$ after $500$ questions, using the Two phases strategy, in the “ca” (chair then agents) and in the “ac” (agents then chair) variants. These numbers are to be compared with the MMR value reached after 500 questions with the Pessimistic strategy (displayed in \cref{fig:linearity}), which is $0.6$; the Pessimistic strategy asks on average $48$ questions to the chair in this setting. \commentBN{This is not true anymore, after 400 questions it reaches $0.9$ with 0 questions to the chair, after 500 questions it reaches $0.47$ ($\sigma = 0.51$) with $11.05$ question to the chair ($\sigma=12.34$). The data in Table 2 is after 582 questions.}\commentBN{Even this comment is not entirely true. We should take the data after 500 questions on the same datasets as the one used in Table3. On the first 3 runs, after 500 questions the regret is $0.62$ ($\sigma = 0.42$) and the number of questions to the committee is $14.33$ ($\sigma = 13.58$). On the first 7 runs, after 500 questions the regret is $0.67$ ($\sigma = 0.45$) and the number of questions to the committee is $13.29$ ($\sigma = 13.11$).}
+\Cref{tab:twoP500} shows the MMR value reached in problems of size $m = 10, n = 20$ after $500$ questions, using the Two phases strategy, in the “ca” (chair then agents) and in the “ac” (agents then chair) variants. These numbers are to be compared with the MMR value reached after 500 questions with the Pessimistic strategy (displayed in \cref{fig:linearity}), which is $0.6$; the Pessimistic strategy asks on average $48$ questions to the chair in this setting. 
+%\commentBN{This is not true anymore, after 400 questions it reaches $0.9$ with 0 questions to the chair, after 500 questions it reaches $0.47$ ($\sigma = 0.51$) with $11.05$ question to the chair ($\sigma=12.34$). The data in Table 2 is after 582 questions.}\commentBN{Even this comment is not entirely true. We should take the data after 500 questions on the same datasets as the one used in Table3. On the first 3 runs, after 500 questions the regret is $0.62$ ($\sigma = 0.42$) and the number of questions to the chair is $14.33$ ($\sigma = 13.58$). On the first 7 runs, after 500 questions the regret is $0.67$ ($\sigma = 0.45$) and the number of questions to the chair is $13.29$ ($\sigma = 13.11$).}
 The line $q_c = 0$, where no question is asked to the chair, suggest that it is possible to obtain a good-quality recommendation while knowing only that the voting rule is a scoring rule with convex weights, which is our basic hypothesis. However, we observe that asking no questions to the chair does not permit to reach $\MMR\!=\!0$. The strategy, indeed, obtains full knowledge of the profile after an average of 500 questions to the voters but never reaches zero.
 
 \section{Conclusions}  
